# LoungeDisplay

./: .gitmodules  AGENTS.md  README.md  index.html  main.py  pyproject.toml  script.js  styles.css
legacyJavascriptCode/: index.html  script.js  styles.css
rgbmatrix/: CMakeLists.txt  pyproject.toml  rgbmatrix
rgbmatrix/bindings/c#/: RPiRgbLEDMatrix.csproj
rgbmatrix/bindings/python/rgbmatrix/: core.pyi  graphics.pyi
rgbmatrix/bindings/python/samples/: gif-viewer.py  graphics.py  grayscale-block.py  hello-layout.py  image-draw.py  image-scroller.py  image-viewer.py  race-clock.py  runtext.py  samplebase.py  samplepaths.py  still-viewer.py
