[project]
name = "loungedisplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "rgbmatrix",
]

[tool.ruff]
extend-exclude = ["rgbmatrix"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
rgbmatrix = { path = "./rgbmatrix" }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = [
    "rgbmatrix"
]
preset = "strict"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
